fix(expandableTreeView): #TreeView expands and shrinks based on the number of visible components

--- a/src/main/resources/com/abelovagrupa/dbeeadmin/styles.css
+++ b/src/main/resources/com/abelovagrupa/dbeeadmin/styles.css
@@ -14,3 +14,11 @@
 .comment {
     -fx-fill: dimgray;
 }
+
+.tree-view {
+     -fx-background-color: transparent;
+     -fx-border-color: transparent;
+     -fx-border-width: 0;
+
+}
+
